[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qviz"
version = "0.1.0"
description = "Statevector visualizer for Qiskit circuits"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "qiskit",
    "qiskit-aer",
    "tqdm",
    "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
